GS-2139 Remove more java1.5 stuff